# consoleCAS-SL1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  version.h.in
app/: CMakeLists.txt  application.h  balzer.rul  bulk-mode.c  bulklog-window.c  cell-window.c  curses-view.c  curses-view.h  main.c  mazoyer.rul  simple-view.c  status-window.c  visual-mode.c  waksman.rul
lib/: CMakeLists.txt  cassl1.h  cell.c  rule-index.c  rulefile.c  state.c
test/: CMakeLists.txt  mazoyer.cpp  test_cas.cpp
